frame/support/test/tests/construct_runtime_ui/abundant_where_param.stderr
error: `Block` was declared above. Please use exactly one delcataion for `Block`.
 --> $DIR/abundant_where_param.rs:7:3
  |
7 |         Block = Block1,
  |         ^^^^^
